--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
 	<!-- Webix Library -->
 	<script type="text/javascript" src="//cdn.webix.com/edge/webix.js"></script>
 	<link rel="stylesheet" type="text/css" href="//cdn.webix.com/edge/webix.css">
-
+	<link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.0.10/css/all.css?v=6.0.7" integrity="sha384-+d0P83n9kaQMCwj8F4RJB66tzIwOKmrdb46+porD/OvrJ+37WqIM7UoBtwHO6Nlg" crossorigin="anonymous">
 	<!-- App -->
 	<script type="text/javascript" src="codebase/myapp.js"></script>
 	<link rel="stylesheet" type="text/css" href="codebase/myapp.css">
